--- a/src/fibonacci-2022-primarie/index.html
+++ b/src/fibonacci-2022-primarie/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>Giochi di Fibonacci 2023</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Prima fase dei Giochi di Fibonacci per le scuole primarie" />
-</head>
-<body>
-  <div id="root"></div>
-  <script type="module" src="index.jsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Giochi di Fibonacci 2023</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Prima fase dei Giochi di Fibonacci per le scuole primarie" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="index.jsx"></script>
+  </body>
 </html>
