--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>Selezioni scolastiche</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Selezioni scolastiche delle Olimpiadi di Informatica Italiane" />
-</head>
-<body>
-  <h2>Edizione 2022-2023</h2>
-  <ul>
-    <li><a href="/scolastiche-2022-demo/">Demo della selezione scolastica delle Olimpiadi Italiane di Informatica</a></li>
-    <li><a href="/scolastiche-2022/">Selezione scolastica delle Olimpiadi Italiane di Informatica</a></li>
-    <li><a href="/fibonacci-2022-primarie/">Prima fase dei Giochi di Fibonacci per la scuola primaria</a></li>
-    <li><a href="/fibonacci-2022-secondarie/">Prima fase dei Giochi di Fibonacci per la scuola secondaria</a></li>
-  </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Selezioni scolastiche</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Selezioni scolastiche delle Olimpiadi di Informatica Italiane" />
+  </head>
+  <body>
+    <h2>Edizione 2022-2023</h2>
+    <ul>
+      <li>
+        <a href="/scolastiche-2022-demo/">
+          Demo della selezione scolastica delle Olimpiadi Italiane di Informatica
+        </a>
+      </li>
+      <li>
+        <a href="/scolastiche-2022/">
+          Selezione scolastica delle Olimpiadi Italiane di Informatica
+        </a>
+      </li>
+      <li>
+        <a href="/fibonacci-2022-primarie/">
+          Prima fase dei Giochi di Fibonacci per la scuola primaria
+        </a>
+      </li>
+      <li>
+        <a href="/fibonacci-2022-secondarie/">
+          Prima fase dei Giochi di Fibonacci per la scuola secondaria
+        </a>
+      </li>
+    </ul>
+  </body>
 </html>
