--- a/src/scolastiche-2022/index.html
+++ b/src/scolastiche-2022/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>Scolastiche 2022</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Selezione scolastica delle Olimpiadi di Informatica Italiane" />
-</head>
-<body>
-<div id="root"></div>
-<script type="module" src="index.jsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Scolastiche 2022</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Selezione scolastica delle Olimpiadi di Informatica Italiane" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="index.jsx"></script>
+  </body>
 </html>
