--- a/src/index.html
+++ b/src/index.html
@@ -2,35 +2,59 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <title>Selezioni scolastiche</title>
+    <title>OII - Scolastiche</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Selezioni scolastiche delle Olimpiadi di Informatica Italiane" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h2>Edizione 2022-2023</h2>
-    <ul>
-      <li>
-        <a href="/scolastiche-2022-demo/">
-          Demo della selezione scolastica delle Olimpiadi Italiane di Informatica
-        </a>
-      </li>
-      <li>
-        <a href="/scolastiche-2022/">
-          Selezione scolastica delle Olimpiadi Italiane di Informatica
-        </a>
-      </li>
-      <li>
-        <a href="/fibonacci-2022-primarie/">
-          Prima fase dei Giochi di Fibonacci per la scuola primaria
-        </a>
-      </li>
-      <li>
-        <a href="/fibonacci-2022-secondarie/">
-          Prima fase dei Giochi di Fibonacci per la scuola secondaria
-        </a>
-      </li>
-    </ul>
+    <main class="prose lg:max-w-[90ch] p-5 mb-12 mx-auto">
+      <div class="border-2 dark:border-0 rounded-xl bg-white p-5 mb-8 w-full">
+        <img src="/logo.png" width="500" height="130" alt="Logo OII" class="my-0 mx-auto" />
+      </div>
+
+      Raccolta delle prove delle gare scolastiche delle Olimpiadi Italiane di Informatica e dei
+      Giochi di Fibonacci.
+      <ul>
+        <li>
+          Sito ufficiale delle Olimpiadi Italiane di Informatica:
+          <a href="https://olimpiadi-informatica.it">https://olimpiadi-informatica.it</a>.
+        </li>
+        <li>
+          Sito ufficiale dei Giochi di Fibonacci:
+          <a href="https://fibonacci.olinfo.it">https://fibonacci.olinfo.it</a>.
+        </li>
+        <li>
+          Indice delle risorse per le Olimpiadi di Informatica:
+          <a href="https://olinfo.it">https://olinfo.it</a>.
+        </li>
+      </ul>
+
+      <div class="flex flex-col lg:flex-row lg:gap-10">
+        <div class="basis-1/2">
+          <h2>Selezioni scolastiche delle Olimpiadi Italiane di Informatica</h2>
+          <ul>
+            <li><a href="/scolastiche-2022/">Edizione 2022</a></li>
+            <li><a href="/scolastiche-2022-demo/">Edizione 2022 - Demo</a></li>
+            <li><a href="/scolastiche-2021/">Edizione 2021</a></li>
+          </ul>
+        </div>
+        <div class="basis-1/2">
+          <h2>Giochi di Fibonacci</h2>
+          <ul>
+            <li>
+              <a href="/fibonacci-2022-primarie/">Edizione 2022 - Prima fase per scuole primarie</a>
+            </li>
+            <li>
+              <a href="/fibonacci-2022-secondarie/">
+                Edizione 2022 - Prima fase per scuole secondarie
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
