--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
             <li><a href="/scolastiche-2022/">Edizione 2022</a></li>
             <li><a href="/scolastiche-2022-demo/">Edizione 2022 - Demo</a></li>
             <li><a href="/scolastiche-2021/">Edizione 2021</a></li>
+            <li><a href="/scolastiche-2019/">Edizione 2019</a></li>
           </ul>
         </div>
         <div class="basis-1/2">
