--- a/src/fibonacci-2022-secondarie/index.html
+++ b/src/fibonacci-2022-secondarie/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <title>Giochi di Fibonacci 2023</title>
+    <title>Giochi di Fibonacci 2022 - 2023</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
