--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <title>OII - Scolastiche</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Selezioni scolastiche delle Olimpiadi di Informatica Italiane" />
+    <meta name="description" content="Selezioni scolastiche delle Olimpiadi di Informatica Italiane" />
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -15,8 +13,7 @@
         <img src="/logo.png" width="500" height="130" alt="Logo OII" class="my-0 mx-auto" />
       </div>
 
-      Raccolta delle prove delle gare scolastiche delle Olimpiadi Italiane di Informatica e dei
-      Giochi di Fibonacci.
+      Raccolta delle prove delle gare scolastiche delle Olimpiadi Italiane di Informatica e dei Giochi di Fibonacci.
       <ul>
         <li>
           Sito ufficiale delle Olimpiadi Italiane di Informatica:
