--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,22 @@
         </li>
       </ul>
 
-      <div class="flex flex-col lg:flex-row lg:gap-10">
-        <div class="basis-1/2">
+      <div class="lg:columns-2 *:inline-block">
+        <div>
+          <h2>Giochi di Fibonacci - Scuole primarie</h2>
+          <ul>
+            <li><a href="/fibonacci-2023-primarie/">Edizione 2023</a></li>
+            <li><a href="/fibonacci-2022-primarie/">Edizione 2022</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Giochi di Fibonacci - Scuole secondarie</h2>
+          <ul>
+            <li><a href="/fibonacci-2023-secondarie/">Edizione 2023</a></li>
+            <li><a href="/fibonacci-2022-secondarie/">Edizione 2022</a></li>
+          </ul>
+        </div>
+        <div>
           <h2>Selezioni scolastiche delle Olimpiadi Italiane di Informatica</h2>
           <ul>
             <li><a href="/scolastiche-2023/">Edizione 2023</a></li>
@@ -39,27 +53,6 @@
             <li><a href="/scolastiche-2021/">Edizione 2021</a></li>
             <li><a href="/scolastiche-2020/">Edizione 2020</a></li>
             <li><a href="/scolastiche-2019/">Edizione 2019</a></li>
-          </ul>
-        </div>
-        <div class="basis-1/2">
-          <h2>Giochi di Fibonacci</h2>
-          <ul>
-            <li>
-              <a href="/fibonacci-2023-primarie/">Edizione 2023 - Prima fase per scuole primarie</a>
-            </li>
-            <li>
-              <a href="/fibonacci-2023-secondarie/">
-                Edizione 2023 - Prima fase per scuole secondarie
-              </a>
-            </li>
-            <li>
-              <a href="/fibonacci-2022-primarie/">Edizione 2022 - Prima fase per scuole primarie</a>
-            </li>
-            <li>
-              <a href="/fibonacci-2022-secondarie/">
-                Edizione 2022 - Prima fase per scuole secondarie
-              </a>
-            </li>
           </ul>
         </div>
       </div>
