--- a/fibonacci-primarie/2023-prima-fase/index.html
+++ b/fibonacci-primarie/2023-prima-fase/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Giochi di Fibonacci 2023/2024 - Scuole primarie</title>
-  <meta name="description" content="Prima fase dei Giochi di Fibonacci per le scuole primarie">
+  <title>Giochi di Fibonacci 2023/2024 - Fase I - Scuole primarie</title>
+  <meta name="description" content="Prima fase dei Giochi di Fibonacci 2023/2024 per le scuole primarie">
   <link rel="modulepreload" href="/assets/react-dom-DWilhIVE.js">
   <link rel="modulepreload" href="/assets/toString-BpEX5tmT.js">
   <link rel="modulepreload" href="/assets/olinfo-auth-BN43vV69.js">
@@ -18,6 +18,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/page-fibonacci-primarie-2023-7QR8lkEQ.js"></script>
+  <script type="module" src="/assets/page-fibonacci-primarie-2023-prima-fase-BQj9dQzu.js"></script>
 </body>
 </html>
