--- a/fibonacci-secondarie/2022-prima-fase/index.html
+++ b/fibonacci-secondarie/2022-prima-fase/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Giochi di Fibonacci 2022/2023 - Scuole primarie</title>
-  <meta name="description" content="Prima fase dei Giochi di Fibonacci per le scuole primarie">
+  <title>Giochi di Fibonacci 2022/2023 - Fase I - Scuole secondarie</title>
+  <meta name="description" content="Prima fase dei Giochi di Fibonacci 2022/2023 per le scuole secondarie">
   <link rel="modulepreload" href="/assets/react-dom-DWilhIVE.js">
   <link rel="modulepreload" href="/assets/toString-BpEX5tmT.js">
   <link rel="modulepreload" href="/assets/olinfo-auth-BN43vV69.js">
-  <link rel="modulepreload" href="/assets/question-nS1UvLzg.js">
+  <link rel="modulepreload" href="/assets/question-DVejY0xJ.js">
   <link rel="modulepreload" href="/assets/preload-helper-B_KhYgH7.js">
   <link rel="modulepreload" href="/assets/commonjs-helper-3Jsk8tIi.js">
   <link rel="modulepreload" href="/assets/zod-CXY4Xi5W.js">
@@ -18,6 +18,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/page-fibonacci-primarie-2022-CJuef6Zo.js"></script>
+  <script type="module" src="/assets/page-fibonacci-secondarie-2022-prima-fase-DlU49XIm.js"></script>
 </body>
 </html>
