deploy: bdc2a519ec034f008adcbf23987ff1aca15ed691

--- a/fibonacci-secondarie/2023-terza-fase/index.html
+++ b/fibonacci-secondarie/2023-terza-fase/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Giochi di Fibonacci 2023/2024 - Fase II - Scuole secondarie</title>
-  <meta name="description" content="Seconda fase dei Giochi di Fibonacci 2023/2024 per le scuole secondarie">
+  <title>Giochi di Fibonacci 2023/2024 - Fase Finale</title>
+  <meta name="description" content="Fase Finale dei Giochi di Fibonacci 2023/2024">
   <link rel="modulepreload" href="/assets/react-dom-BhtgsTX5.js">
   <link rel="modulepreload" href="/assets/toString-B7mxur-0.js">
   <link rel="modulepreload" href="/assets/olinfo-auth-DV3DIqQe.js">
-  <link rel="modulepreload" href="/assets/question-bh7wLM0A.js">
   <link rel="modulepreload" href="/assets/visualizer-Duv0zybs.js">
   <link rel="stylesheet" href="/assets/visualizer-ocAUdWMU.css">
   <link rel="modulepreload" href="/assets/preload-helper-B6uM3qOM.js">
@@ -23,6 +22,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/assets/page-fibonacci-secondarie-2023-seconda-fase-DdKh9Naq.js"></script>
+  <script type="module" src="/assets/page-fibonacci-secondarie-2023-terza-fase-C2Q4d39K.js"></script>
 </body>
 </html>
